# group

./: README.md
racecar_ws/: README.md
racecar_ws/src/racecar_description/: CMakeLists.txt  package.xml
racecar_ws/src/racecar_description/config/: bridge.yaml
racecar_ws/src/racecar_description/launch/: display.launch.py
racecar_ws/src/racecar_description/rviz/: racecar.rviz
racecar_ws/src/racecar_description/urdf/: racecar.urdf.xacro  sensors.xacro
racecar_ws/src/racecar_description/worlds/: track.sdf
racecar_ws/src/sim_perception/: setup.py
racecar_ws2/racecar_description/: CMakeLists.txt
racecar_ws2/racecar_description/config/: bridge.yaml
racecar_ws2/racecar_description/launch/: display.launch.py
racecar_ws_1/: README.md
racecar_ws_1/src/racecar_description/config/: bridge.yaml
racecar_ws_1/src/racecar_description/rviz/: racecar.rviz
racecar_ws_1/src/racecar_description/scripts/: odom_to_tf.py
racecar_ws_1/src/sim_perception/: package.xml
racecar_ws_3/racecar_description/: CMakeLists.txt  package.xml
racecar_ws_3/racecar_description/config/: bridge.yaml  points_bridge.yaml
racecar_ws_3/racecar_description/models/shixi/: model.sdf
racecar_ws_3/racecar_description/rviz/: racecar.rviz
racecar_ws_3/racecar_description/scripts/: gps_odom_relay.py
racecar_ws_3/racecar_description/urdf/: racecar.urdf.xacro  sensors.xacro
racecar_ws_3/racecar_localization/: CMakeLists.txt  package.xml
racecar_ws_3/racecar_localization/config/: ekf.yaml
racecar_ws_3/racecar_localization/launch/: localization.launch.py
(+4 files in other folders)
